# bwsi2018

./: README.md
final_chal/: arrowdetect.py  brickdetect.py  drive.py  image_processor.py  starter.py  state_machine.py
final_chal/launch/: zed_wrapper_nodelet.cpp
g8/src/challenge/: colour.py
g8/src/circle/: constants.py  controllers.py  state_machine.py
g8/src/launch/: line_follower.launch
g8/src/odometry/: odemetry_read.py
g8/src/uber/: face.py  state_machine.py  wall_follower.py
w1/: CMakeLists.txt  circle.py  forward.py  safety.py  wallfollower.py  zed_wrapper_node.cpp
w1/contour/: converter.py  detector.py
w1/detection/: line_follower.py
w1/frames_raw/: extract_faces.py
w1/launcher/: ex.launch
w1/rainbow/: rainbow.py
